Start fixing no left sidebar spacing

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -71,7 +71,7 @@ body.menu-colors {
 }
 
 body.menu-colors #content-area, body.fixed-second #content-area, body.node-type-fluid-width-secondary-page #content-area {
-  margin-left: 35px;
+  /*margin-left: 35px;*/
   padding: 19px 30px 0 30px;
 }
 
